Added the README.md, and removed the test API
